<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/nicLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/nic_prompt"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            app:passwordToggleEnabled="true"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:hint="@string/password_prompt"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:padding="18dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="1dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:text="@string/create_new_account_prompt"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_prompt"
            android:textColor="@color/button"
            android:textAllCaps="true"
            android:background="@android:color/transparent"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            app:cornerRadius="0dp"
            android:layout_gravity="center"/>


    </LinearLayout>
</LinearLayout>